# CPU_emulator

./: CMakeLists.txt  README.md  fact.txt  fib.txt  main  main.cpp  test.txt
libs/CPU/: CMakeLists.txt
libs/CPU/include/: CPU.hpp
libs/CPU/src/: CPU.cpp
libs/CPU/test/: test.cpp
libs/CPU/test/test_files/: add.txt  call.txt  div.txt  ja.txt  jae.txt  jb.txt  jbe.txt  jeq.txt  jmp.txt  jne.txt  mul.txt  pop.txt  push.txt  registers.txt  sub.txt
libs/Commands/include/: Commands.hpp
libs/Commands/src/: Commands  Commands.cpp
libs/Parser/: CMakeLists.txt
libs/Parser/include/: Parser.hpp
libs/Parser/src/: Parser.cpp
libs/Parser/test/: test.cpp
libs/Parser/test/test_files/: test3.txt
libs/Preprocessor/: CMakeLists.txt
libs/Preprocessor/include/: Preprocessor.hpp
libs/Preprocessor/src/: Preprocessor.cpp
libs/Stack/: CMakeLists.txt
libs/Stack/include/: Stack.hpp
libs/Stack/src/: Stack.cpp
libs/Stack/test/: test.cpp
libs/Starter/: CMakeLists.txt
libs/Starter/include/: Starter.hpp
libs/Starter/src/: Starter.cpp
test/: CMakeLists.txt  test.cpp  test1.txt  test2.txt  unexpected_symbol.cpp
